<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/details_bottom_sheet_background">

        <LinearLayout
                android:id="@+id/sheetLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/details_sheet_background"
                app:layout_constraintTop_toTopOf="parent" tools:layout_editor_absoluteX="0dp">

            <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/details_sheet_image_height"
                    android:layout_gravity="center"
                    tools:src="@drawable/keg"/>

            <TextView
                    android:id="@+id/taglineTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    style="@style/TextAppearance.AppCompat.Headline"
                    tools:text="POST MODERN CLASSIC. SPIKY. TROPICAL. HOPPY."/>

            <TextView
                    android:id="@+id/nameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    style="@style/TextAppearance.AppCompat.Headline"
                    tools:text="Punk IPA 2007 - 2010"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/sheetLinearLayout">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/details_description"
                    style="@style/TextAppearance.AppCompat.Headline"/>
            <TextView
                    android:id="@+id/descriptionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Our flagship beer that kick started the craft beer revolution. This is James and Martin's original take on an American IPA, subverted with punchy New Zealand hops. Layered with new world hops to create an all-out riot of grapefruit, pineapple and lychee before a spiky, mouth-puckering bitter finish."/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/details_first_brewed"
                    style="@style/TextAppearance.AppCompat.Headline"/>
            <TextView
                    android:id="@+id/firstBrewedTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="04/2007"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/details_brewed_tips"
                    style="@style/TextAppearance.AppCompat.Headline"/>
            <TextView
                    android:id="@+id/brewedTipsTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="While it may surprise you, this version of Punk IPA isn't dry hopped but still packs a punch! To make the best of the aroma hops make sure they are fully submerged and add them just before knock out for an intense hop hit."/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/details_food_pairing"
                    style="@style/TextAppearance.AppCompat.Headline"/>
            <TextView
                    android:id="@+id/foodPairingTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Spicy carne asada with a pico de gallo sauce\nShredded chicken tacos with a mango chilli lime salsa\nCheesecake with a passion fruit swirl sauce"/>

            <TextView
                    android:id="@+id/contributedByTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/details_contributed_by"/>
        </LinearLayout>

        <ImageView
                android:id="@+id/cancelImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/close"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>