<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".representation.favorites.FavoritesFragment">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:liftOnScroll="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_scrollFlags="scroll">

            <com.google.android.material.appbar.MaterialToolbar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="?attr/actionBarSize"
                    app:layout_scrollFlags="scroll"
                    app:title="@string/favorites_title"/>

            <com.google.android.material.card.MaterialCardView
                    android:id="@+id/drinkAmountCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <TextView
                            android:id="@+id/totalAmountTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/favorites_total_amount"
                            android:textAlignment="center"
                            style="@style/TextAppearance.AppCompat.Headline"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/counterLinearLayout"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                    <LinearLayout
                            android:id="@+id/counterLinearLayout"
                            android:layout_width="@dimen/favorites_counter_shape_size"
                            android:layout_height="@dimen/favorites_counter_shape_size"
                            android:background="@drawable/favorites_amount_shape"
                            app:layout_constraintStart_toEndOf="@+id/totalAmountTextView"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent">

                        <TextView
                                android:id="@+id/counterTextView"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/favorites_counter_shape_size"
                                android:textAlignment="center"
                                android:gravity="center"
                                android:autoSizeTextType="uniform"
                                android:autoSizeMaxTextSize="@dimen/favorites_counter_max_text_size"
                                tools:text="10"/>
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            tools:itemCount="10"
            tools:listitem="@layout/list_item"/>

    <TextView
            android:id="@+id/emptyFavoritesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorites_empty"
            android:visibility="gone"
            android:layout_gravity="center"/>

    <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            app:indicatorColor="@color/brand"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>